# TIL

./: .breakpoints  .replit  README.md  a.out
Algorithm/python_for_coding_test/: add_multi_string.py  break_with_while.py  coin_exchange.py  def_example.py  dictionary_example.py  f-string.py  for_example.py  for_example_1.py  list_comprehension.py  list_initialization.py  list_methods.py  main.py  non-global_example.py  packing_unpacking.py  tuple_example.py  while_example.py
Internship/: CIFARdownload.py  MNIST.py  Untitled.ipynb  cifar_net.pth  main.py  minist.py  modtest.py  mycnn.py  readme.md  기본모델 구축+저장-Copy1.ipynb  기본모델 구축+저장.ipynb  데이터불러오기_커스터마이징.ipynb  버전정리.md  숙제2 from.민규 사원님.ipynb  숙제3 from.민규 사원님.ipynb  연습장-Copy1.ipynb  연습장.ipynb
Internship/AR_CMS/: Untitled.ipynb  capture.py  frame.ipynb  frame.py  frame_feedback.ipynb  frame추출코드 baseline.ipynb  frame추출코드.ipynb  readme.md
Internship/DMS2/: Untitled.ipynb  readme.md
Internship/DMS2_SMU/: FER-0~3.mp4.ipynb  FER-0~50.mp4-Copy1.ipynb  FER-0~50.mp4-cvtColor Error.ipynb  FER-0~50.mp4-민규사원님.ipynb  FER-0~50.mp4.ipynb  FER-0~50.mp4_torch_mobilenetV2-Copy1.ipynb  FER-0~50.mp4_torch_mobilenetV2.ipynb  FER-4~50.mp4.ipynb  _utils.py  emotion.py  emotion_torch_mobilenetV2.py  mobilenetv2.py  readme.md  sample_code.ipynb  sample_code_zorang2.ipynb
Internship/MobileNetV2_FER/: AffectNet_Read_and_Division.py  LibreOffice_csv_error.py  test.py  (+7 more)
Study_Java/: HelloWorldGUIapp.java
Study_Yeungnam_Univ/: README.md
Study_Yeungnam_Univ/Data structure/Chap.1/: CMakeLists.txt  program1.1  program1.1.c  selectsort.c
(+420 files in other folders)
